--- a/index.html
+++ b/index.html
@@ -2146,6 +2146,25 @@
                             </div>
                         </div>
                     </div>
+                    <div class="pandora">
+                        <div class="list">
+                            <div class="box">
+                                <div class="top">
+                                    <div class="image">
+                                        <img src="image/121_フサイチパンドラ.png">
+                                    </div>
+                                    <div class="bg">
+                                        <div class="bgc"></div>
+                                        <div class="side">Fusaichi Pandora</div>
+                                    </div>
+                                </div>
+                                <div class="bottom">
+                                    <p class="name">フサイチパンドラ</p>
+                                    <p class="cv"><span>CV:</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="vista">
                         <div class="list">
                             <div class="box">
