--- a/index.html
+++ b/index.html
@@ -3044,6 +3044,56 @@
                             </div>
                         </div>
                     </div>
+                    <div class="chitose">
+                        <div class="list">
+                            <div class="box">
+                                <label for="chitose">
+                                <div class="top">
+                                    <div class="image">
+                                        <img src="image/122_サクラチトセオー.png">
+                                    </div>
+                                    <div class="bg">
+                                        <div class="bgc"></div>
+                                        <div class="side">Sakura Chitose O</div>
+                                    </div>
+                                </div>
+                                </label>
+                                <div class="bottom">
+                                    <p class="name">サクラチトセオー</p>
+                                    <p class="cv">
+                                        <span class="s-cv">CV:</span>
+                                        <input type="checkbox" id="chitose" class="checkbox">
+                                        <span class="m-cv"></span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blast">
+                        <div class="list">
+                            <div class="box">
+                                <label for="blast">
+                                <div class="top">
+                                    <div class="image">
+                                        <img src="image/123_ブラストワンピース.png">
+                                    </div>
+                                    <div class="bg">
+                                        <div class="bgc"></div>
+                                        <div class="side">Blast Onepiece</div>
+                                    </div>
+                                </div>
+                                </label>
+                                <div class="bottom">
+                                    <p class="name">ブラストワンピース</p>
+                                    <p class="cv">
+                                        <span class="s-cv">CV:</span>
+                                        <input type="checkbox" id="blast" class="checkbox">
+                                        <span class="m-cv">紫月杏朱彩</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer></footer>
